---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module a export b module b export c type c : int end b end a\nvar d : a.b.c := 1\n"
---
"a"@(FileId(1), 7..8) [Module(No)]: <error>
"b"@(FileId(1), 25..26) [Module(No)]: <error>
"c"@(FileId(1), 41..42) [Type]: alias[DefId(PackageId(0), LocalDefId(2))] of int
"d"@(FileId(1), 65..66) [ConstVar(Var, No)]: alias[DefId(PackageId(0), LocalDefId(2))] of int
"c"@(FileId(1), 34..35) [Export]: alias[DefId(PackageId(0), LocalDefId(2))] of int
"b"@(FileId(1), 16..17) [Export]: <error>
"<root>"@(dummy) [Module(No)]: <error>

